--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <ul>
+        <li>Tudo</li>
+        <li>Sobre</li>
         <li>Volei</li>
-        <li>Seleção</li>
-        <li>Jogadoras</li>
     </ul>
 </body>
 </html>
