--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <ul>
-        <li>Tudo</li>
-        <li>Sobre</li>
-        <li>Volei</li>
+    <ul class="nav_lista">
+        <li class="nav_item">Tudo</li>
+        <li class="nav_item">Sobre</li>
+        <li class="nav_item">Volei</li>
     </ul>
 </body>
 </html>
