--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <ul class="nav_lista">
-        <li class="nav_item">Tudo</li>
-        <li class="nav_item">Sobre</li>
         <li class="nav_item">Volei</li>
+        <li class="nav_item">Equipamentos</li>
+        <li class="nav_item">Jogadoras</li>
     </ul>
 </body>
 </html>
