--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <ul class="nav_lista">
         <li class="nav_item">Volei</li>
-        <li class="nav_item">Equipamentos</li>
+        <li class="nav_item">Melhores Lances</li>
         <li class="nav_item">Jogadoras</li>
     </ul>
 </body>
