--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <ul class="nav_lista">
-        <li class="nav_item">Volei</li>
-        <li class="nav_item">Melhores Lances</li>
-        <li class="nav_item">Jogadoras</li>
+        <li class="nav_item">volei</li>
+        <li class="nav_item">melhores lances</li>
+        <li class="nav_item">jogadoras</li>
     </ul>
+    </header>
+
+    <main>
+        <section class="secao">
+            <div class="titulo_section">
+                <h1>volei</h1>
+            </div>
+            <ul class="moldura_videos">
+                <li class="video"></li>
+                <li class="video"></li>
+                <li class="video"></li>
+            </ul>
+        </section>
+    </main>
 </body>
+
 </html>
