--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <header>
         <ul class="nav_lista">
-            <li class="nav_item">Ram3500</li>
-            <li class="nav_item">Silverado</li>
-            <li class="nav_item">F-150</li>
+            <li class="nav_item">volei</li>
+            <li class="nav_item">Melhores lances </li>
+            <li class="nav_item">Jogadoras</li>
         </ul>
     </header>
 
@@ -26,18 +26,26 @@
                 <h1>Ram3500</h1>
             </div>
             <ul class="moldura_videos">
-                <li class="video"><iframe width="480" height="320" src="https://www.youtube.com/embed/ZJYd5WEC4ho"
-                        title="2024 RAM 3500 Heavy Duty Limited Night Mega Cab 4x4 Truck" frameborder="0"
+                <li class="video"><iframe width="480" height="320" src="https://www.youtube.com/embed/vLYgWuIobjg"
+                        title="JOGO COMPLETO: VÔLEI FEMININO: BRASIL X POLÔNIA | 3ª RODADA | OLIMPÍADAS PARIS 2024"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></iframe>
+                </li>
+                <li class="video"><iframe width="480" height="320" src="https://www.youtube.com/embed/5vzW4ZL46Xc"
+                        title="VÔLEI FEMININO | BRASIL 3 X 0 JAPÃO | MELHORES MOMENTOS | OLIMPÍADAS PARIS 2024"
+                        frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </iframe>
+                    </iframe>
                 </li>
-                <li class="video"><iframe width="480" height="320" src="https://www.youtube.com/embed/zaFnVRwDtEY" title="2016 Ram 3500 Longhorn Limited Mega Cab DRW Diesel - Low Miles, 1-Owner Stock #684" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </iframe>
-                </li>
-                <li class="video"><iframe width="480" height="320" src="https://www.youtube.com/embed/oGBLi7EtWgA"
-                        title="👉2024 RAM 3500 LIMITED LONGHORN MEGA CAB 4X4" frameborder="0"
+                <li class="video"><iframe width="480" height="320" src="https://www.youtube.com/embed/kfEwTj_cKKs"
+                        title="VÔLEI FEMININO | BRASIL 3 X 0 REP. DOMINICANA | MELHORES MOMENTOS | OLIMPÍADAS PARIS 2024"
+                        frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </iframe>
                 </li>
             </ul>
         </section>
